--- a/stable/artifactory/templates/artifactory-statefulset.yaml
+++ b/stable/artifactory/templates/artifactory-statefulset.yaml
@@ -132,7 +132,11 @@ spec:
           echo "Copy system.yaml to {{ .Values.artifactory.persistence.mountPath }}/etc";
           mkdir -p {{ .Values.artifactory.persistence.mountPath }}/etc;
           mkdir -p {{ .Values.artifactory.persistence.mountPath }}/etc/access/keys/trusted;
+          {{- if .Values.systemYaml }}
+          cp -fv /tmp/etc/{{ .Values.systemYaml.dataKey }} {{ .Values.artifactory.persistence.mountPath }}/etc/system.yaml;
+          {{- else }}
           cp -fv /tmp/etc/system.yaml {{ .Values.artifactory.persistence.mountPath }}/etc/system.yaml;
+          {{- end }}
           echo "Remove {{ .Values.artifactory.persistence.mountPath }}/lost+found folder if exists";
           rm -rfv {{ .Values.artifactory.persistence.mountPath }}/lost+found;
         {{- if .Values.access.accessConfig }}
@@ -179,9 +183,16 @@ spec:
         volumeMounts:
         - name: artifactory-volume
           mountPath: {{ .Values.artifactory.persistence.mountPath | quote }}
+      {{- if or .Values.systemYaml .Values.artifactory.systemYaml }}
         - name: systemyaml
+          {{- if .Values.systemYaml }}
+          mountPath: "/tmp/etc/{{.Values.systemYaml.dataKey}}"
+          subPath: {{ .Values.systemYaml.dataKey }}
+          {{- else if .Values.artifactory.systemYaml }}
           mountPath: "/tmp/etc/system.yaml"
           subPath: system.yaml
+          {{- end }}
+      {{- end }}
         {{- if .Values.access.accessConfig }}
         - name: access-config
           mountPath: "/tmp/etc/access.config.import.yml"
@@ -661,7 +672,7 @@ spec:
       {{- end }}
       - name: systemyaml
         secret:
-          secretName: {{ template "artifactory.fullname" . }}-systemyaml
+          secretName: {{ default (printf "%s-%s" (include "artifactory.fullname" .) "systemyaml") .Values.systemYaml.existingSecret }}
       {{- if .Values.access.accessConfig }}
       - name: access-config
         secret:
