--- a/stable/xray/ci/test-values.yaml
+++ b/stable/xray/ci/test-values.yaml
@@ -3,7 +3,7 @@
 unifiedUpgradeAllowed: true
 databaseUpgradeReady: true
 xray:
-  jfrogUrl: http://artifactory.rt:8082
+  jfrogUrl: http://rt-artifactory.rt:8082
   unifiedSecretInstallation: true
   openMetrics:
     enabled: true
