--- a/stable/xray/templates/xray-hpa.yaml
+++ b/stable/xray/templates/xray-hpa.yaml
@@ -1,3 +1,4 @@
+{{- if or (and  .Values.splitXraytoSeparateDeployments.gradualUpgrade  .Values.splitXraytoSeparateDeployments.enabled)  (not .Values.splitXraytoSeparateDeployments.enabled)  }}
 {{- if and (.Values.autoscaling.enabled) (eq .Values.autoscaling.keda.enabled  false) }}
   {{- if semverCompare ">=v1.23.0-0" .Capabilities.KubeVersion.Version }}
 apiVersion: autoscaling/v2
@@ -26,4 +27,5 @@ spec:
         target:
           type: Utilization
           averageUtilization: {{ .Values.autoscaling.targetCPUUtilizationPercentage }}
+{{- end }}
 {{- end }}
