--- a/stable/xray/templates/xray-keda-secret.yaml
+++ b/stable/xray/templates/xray-keda-secret.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.autoscaling.keda.enabled }}
+{{- if or .Values.autoscaling.keda.enabled .Values.autoscalingServer.keda.enabled .Values.autoscalingIpa.keda.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
