--- a/stable/xray/templates/xray-unified-secret.yaml
+++ b/stable/xray/templates/xray-unified-secret.yaml
@@ -20,7 +20,7 @@ stringData:
 {{- end }}
 {{- end }}
 
-{{- if not .Values.systemYamlOverride.existingSecret }}
+{{- if and (not .Values.systemYamlOverride.existingSecret) .Values.xray.systemYaml }}
   system.yaml: |
 {{ tpl .Values.xray.systemYaml . | nindent 4 }}
 {{- end }}
