--- a/stable/xray/ci/test-rabbitmq-haQuorum-values.yaml
+++ b/stable/xray/ci/test-rabbitmq-haQuorum-values.yaml
@@ -1,4 +1,4 @@
-# Leave this file empty to ensure that CI runs builds against the default configuration in values.yaml.
+# CI values for Xray
 # If this is an upgrade over an existing Xray 3.x, explicitly pass 'unifiedUpgradeAllowed=true' to upgrade.
 unifiedUpgradeAllowed: true
 databaseUpgradeReady: true
@@ -7,18 +7,26 @@ xray:
 common:
   persistence:
     enabled: false
-# To Fix ct tool --reuse-values - PASSWORDS ERROR: you must provide your current passwords when upgrade the release
+
 postgresql:
-  postgresqlPassword: password
+  postgresqlPassword: xray
   persistence:
     enabled: false
 
 rabbitmq:
+  replicaCount: 3
   auth:
     username: guest
     password: password
   persistence:
     enabled: false
+  podManagementPolicy: Parallel
+
+global:
+  xray:
+    rabbitmq:
+      haQuorum:
+        enabled: true
 
 server:
   resources:
@@ -55,13 +63,3 @@ indexer:
     limits:
       memory: "4Gi"
       cpu: "4"
-
-sbom:
-  enabled: true
-  resources:
-    requests:
-      memory: "300Mi"
-      cpu: "50m"
-    limits:
-      memory: "4Gi"
-      cpu: "3"
