--- a/stable/xray/templates/migration-hook.yaml
+++ b/stable/xray/templates/migration-hook.yaml
@@ -2,7 +2,7 @@
 {{- if and (not .Values.rabbitmq.migration.enabled) (not .Values.rabbitmq.rabbitmqUpgradeReady)  }}
     {{- fail "Rabbitmq migration flag is disabled. Please enable the rabbitmq.rabbitmqUpgradeReady flag after manually enabling the feature flags in rabbitmq" }}
 {{- end }}
-{{- if .Values.rabbitmq.migration.enabled }}
+{{- if eq (include "xray.rabbitmq.migration.isHookRegistered" .) "true" }}
 {{- if .Values.rabbitmq.migration.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
@@ -22,7 +22,7 @@ automountServiceAccountToken: {{ .Values.rabbitmq.migration.serviceAccount.autom
 {{- end }}
 ---
 {{- if .Values.rabbitmq.enabled }}
-{{- if .Values.rabbitmq.migration.enabled }}
+{{- if eq (include "xray.rabbitmq.migration.isHookRegistered" .) "true" }}
 {{- if .Values.rabbitmq.migration.serviceAccount.rbac.create }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -43,7 +43,7 @@ rules:
 {{- end }}
 ---
 {{- if .Values.rabbitmq.enabled }}
-{{- if .Values.rabbitmq.migration.enabled }}
+{{- if eq (include "xray.rabbitmq.migration.isHookRegistered" .) "true" }}
 {{- if .Values.rabbitmq.migration.serviceAccount.rbac.create }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -69,9 +69,9 @@ roleRef:
 {{- end }}
 ---
 {{- if .Values.rabbitmq.enabled }}
-{{- if .Values.rabbitmq.migration.enabled }}
-apiVersion: v1
-kind: Pod
+{{- if eq (include "xray.rabbitmq.migration.isHookRegistered" .) "true" }}
+apiVersion: batch/v1
+kind: Job
 metadata:
   labels:
     app: {{ template "xray.name" . }}
@@ -83,37 +83,108 @@ metadata:
     "helm.sh/hook": "pre-upgrade"
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
 spec:
-  {{- if .Values.rabbitmq.podSecurityContext.enabled }}
-  securityContext: {{- omit .Values.rabbitmq.podSecurityContext "enabled" | toYaml | nindent 4 }}
-  {{- end }}
-  {{- if or .Values.imagePullSecrets .Values.global.imagePullSecrets }}
-  {{- include "xray.imagePullSecrets" . | indent 2 }}
-  {{- end }}
-  serviceAccountName: {{ template "xray.rabbitmq.migration.serviceAccountName" . }}
-  containers:
-    - name: pre-upgrade-container
-      image: "{{ include "xray.getRegistryByService" (list . "migrationHook") }}/{{ .Values.rabbitmq.migration.image.repository }}:{{ .Values.rabbitmq.migration.image.tag }}"
-      imagePullPolicy: IfNotPresent
-      {{- if .Values.rabbitmq.containerSecurityContext.enabled }}
-      securityContext: {{- omit .Values.rabbitmq.containerSecurityContext "enabled" | toYaml | nindent 8 }}
+  template:
+    metadata:
+      labels:
+        app: {{ template "xray.name" . }}
+        chart: {{ template "xray.chart" . }}
+        heritage: {{ .Release.Service }}
+        release: {{ .Release.Name }}
+    spec:
+      {{- if .Values.rabbitmq.podSecurityContext.enabled }}
+      securityContext: {{- omit .Values.rabbitmq.podSecurityContext "enabled" | toYaml | nindent 8 }}
       {{- end }}
-      command:
-      - sh
-      - -c
-      - |
-        #!/bin/sh
-        if [ "$(kubectl get pods -l "app.kubernetes.io/name={{ template "rabbitmq.name" . }}" -o jsonpath='{..status.conditions[?(@.type=="Ready")].status}')" = "True" ]; then
-            kubectl exec -it {{ .Release.Name }}-{{ template "rabbitmq.name" . }}-0 -- rabbitmqctl enable_feature_flag all
-            if [ "$?" -ne 0 ]; then
-                echo "Failed to perform the migration. Please make sure to enable the feature flag in rabbitmq manually [rabbitmqctl enable_feature_flag all] " 
-                exit 1
-            else
-                echo Feature flags executed successfully!
+      {{- if or .Values.imagePullSecrets .Values.global.imagePullSecrets }}
+      {{- include "xray.imagePullSecrets" . | indent 6 }}
+      {{- end }}
+      serviceAccountName: {{ template "xray.rabbitmq.migration.serviceAccountName" . }}
+      containers:
+        - name: pre-upgrade-container
+          image: "{{ include "xray.getRegistryByService" (list . "migrationHook") }}/{{ .Values.rabbitmq.migration.image.repository }}:{{ .Values.rabbitmq.migration.image.tag }}"
+          imagePullPolicy: IfNotPresent
+          {{- if .Values.rabbitmq.containerSecurityContext.enabled }}
+          securityContext: {{- omit .Values.rabbitmq.containerSecurityContext "enabled" | toYaml | nindent 12 }}
+          {{- end }}
+          command:
+          - bash
+          - -c
+          - |
+            #!/bin/bash
+            rabbitMqZeroPodName="{{ .Release.Name }}-{{ template "rabbitmq.name" . }}-0"
+            rabbitMqZeroPodStatus=$(kubectl get pods $rabbitMqZeroPodName -n {{ .Release.Namespace }} -o jsonpath='{..status.conditions[?(@.type=="Ready")].status}')
+            
+            {{- if and .Values.global.xray.rabbitmq.haQuorum.enabled .Values.rabbitmq.migration.removeHaPolicyOnMigrationToHaQuorum.enabled }}
+            for (( i=1; i<=6; i++ ))
+            do 
+              if [ "$rabbitMqZeroPodStatus" = "True" ]; then
+                break
+              fi
+              echo "Waiting for Rabbitmq zero pod $rabbitMqZeroPodName to be in Ready state - iteration $i"
+              sleep 5
+              rabbitMqZeroPodStatus=$(kubectl get pods $rabbitMqZeroPodName -n {{ .Release.Namespace }} -o jsonpath='{..status.conditions[?(@.type=="Ready")].status}')
+            done
+            if [ "$rabbitMqZeroPodStatus" != "True" ]; then
+              echo "Rabbitmq zero pod $rabbitMqZeroPodName is not in Ready state. Failed to remove mirroring policy 'ha-all'"
+              exit 1
             fi
-        else
-            echo "Rabbitmq pod is not in running state. Ignoring feature flag migration for rabbitmq"
-        fi
-  restartPolicy: Never
-  terminationGracePeriodSeconds: 0
+            policyExists=$(kubectl exec -i $rabbitMqZeroPodName -n {{ .Release.Namespace }} -- bash -c "rabbitmqctl list_policies --formatter json | grep -o "'"\"name\":\"ha-all\""'" | wc -l | tr -d '[:space:]'")
+            if [ "$?" -ne 0 ]; then
+              echo "Failed to check if policy ha-all exists on default vhost" 
+              exit 1
+            fi
+            echo "Policy ha-all exists: $policyExists"
+            if [ $policyExists -gt 0 ]; then
+              kubectl exec -i $rabbitMqZeroPodName -n {{ .Release.Namespace }} -- rabbitmqctl clear_policy ha-all
+              if [ "$?" -ne 0 ]; then
+                echo "Failed to delete policy ha-all on default vhost"
+                exit 1
+              else
+                echo "Deleted ha-all policy successfully on default vhost"
+              fi
+            fi
+            {{- end }}
+            
+            {{- if .Values.rabbitmq.migration.enabled }}
+            if [ "$rabbitMqZeroPodStatus" = "True" ]; then
+                kubectl exec -i $rabbitMqZeroPodName -n {{ .Release.Namespace }} -- rabbitmqctl enable_feature_flag all
+                if [ "$?" -ne 0 ]; then
+                    echo "Failed to perform the migration. Please make sure to enable the feature flag in rabbitmq manually [rabbitmqctl enable_feature_flag all] " 
+                    exit 1
+                else
+                    echo Feature flags executed successfully!
+                fi
+            else
+                echo "Rabbitmq zero pod is not in running state. Ignoring feature flag migration for rabbitmq"
+            fi
+            {{- end }}
+            
+            {{- if .Values.rabbitmq.migration.deleteStatefulSetToAllowFieldUpdate.enabled }}
+            if [ -n "{{ .Values.rabbitmq.podManagementPolicy }}" ]; then
+              rabbitMqStatefulSetName=$(kubectl get statefulsets -n {{ .Release.Namespace }} -l "app.kubernetes.io/name={{ template "rabbitmq.name" . }},app.kubernetes.io/instance={{ .Release.Name }}" -o=jsonpath='{.items[0].metadata.name}')
+              if [ $? -ne 0 ]; then
+                echo "Failed to get current rabbitmq statefulset name"
+                exit 1
+              fi
+              currPodManagementPolicy=$(kubectl get statefulset $rabbitMqStatefulSetName -n {{ .Release.Namespace }} -o=jsonpath='{.spec.podManagementPolicy}')
+              if [ $? -ne 0 ]; then
+                echo "Failed to get current pod management policy definition"
+                exit 1
+              fi
+              if [ "$currPodManagementPolicy" != "{{ .Values.rabbitmq.podManagementPolicy }}" ]; then
+                kubectl delete statefulset $rabbitMqStatefulSetName --cascade=orphan -n {{ .Release.Namespace }}
+                if [ $? -ne 0 ]; then
+                  echo "Failed to delete statefulset $rabbitMqStatefulSetName to allow update of podManagementDefinition field: [kubectl delete statefulset STATEFULSET_NAME --cascade=orphan]"
+                  exit 1
+                fi
+                echo "Deleted statefulset $rabbitMqStatefulSetName successfully"
+              else
+                echo "Field podManagementPolicy of statefulset $rabbitMqStatefulSetName has not changed"
+              fi
+            else
+              echo "rabbitmq.podManagementPolicy is not set"
+            fi
+            {{- end }}
+      restartPolicy: Never
+      terminationGracePeriodSeconds: 0
 {{- end }}
 {{- end }}
