--- a/stable/xray/templates/xray-keda-trigger-authentication.yaml
+++ b/stable/xray/templates/xray-keda-trigger-authentication.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.autoscaling.keda.enabled }}
+{{- if or .Values.autoscaling.keda.enabled .Values.autoscalingServer.keda.enabled .Values.autoscalingIpa.keda.enabled }}
 apiVersion: keda.sh/v1alpha1
 kind: TriggerAuthentication
 metadata:
